Harden YAML-driven generation and delegated handling